# adk-rust

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  STABILITY.md  lefthook.yml
.kiro/specs/adk-enterprise/: design.md
adk-enterprise/: Cargo.toml  README.md
adk-enterprise/src/: agents.rs  client.rs  client_environment.rs  client_events.rs  client_memory.rs  client_sessions.rs  client_vault.rs  config.rs  error.rs  idempotency.rs  lib.rs  response.rs  retry.rs  stream.rs
adk-enterprise/src/types/: agent.rs  environment.rs  events.rs  memory.rs  mod.rs  model_ref.rs  pagination.rs  session.rs  tools.rs  vault.rs
adk-enterprise/tests/: agent_crud_tests.rs  integration_tests.rs  retry_policy_tests.rs  serialization_conformance_tests.rs  session_event_deserialization_tests.rs  stream_tests.rs  user_event_serialization_tests.rs
adk-graph/src/: lib.rs
adk-graph/src/functional/: context.rs  execution_log.rs  messages.rs  reducers.rs  schema.rs  typed_reducer.rs
adk-managed/: Cargo.toml  README.md
adk-managed/src/: agent_builder.rs  checkpoint.rs  default_runtime.rs  event_mapping.rs  lib.rs  parking.rs  replay.rs  resolver.rs  runtime.rs  schema_normalization.rs  sequence.rs  session_loop.rs  testing.rs  usage.rs
adk-managed/src/types/: agent_def.rs  content.rs  error.rs  events.rs  mod.rs  model_ref.rs  session.rs  tools.rs
adk-managed/tests/: fixture_conformance_tests.rs
adk-managed/tests/fixtures/: README.md  f1_hello.json  f2_mcp_tool.json  f3_custom_tool.json  f4_confirmation.json  f5_resume.json  f6_replay.json  f7_interrupt.json  f8_provider_parity.json
adk-model/examples/: gemini_openai_compat_agent.rs
adk-model/src/: attachment.rs  openai_compatible.rs
adk-rust/: Cargo.toml
adk-rust-macros/src/: lib.rs
adk-rust/src/: lib.rs
adk-server/src/: lib.rs
adk-server/src/background/: cron.rs  mod.rs
adk-skill/src/: select.rs
cargo-adk/src/: main.rs
docs/official_docs/: introduction.md  quickstart-a2ui.md  quickstart.md
docs/official_docs/agents/: desktop-audio.md  graph-agents.md  llm-agent.md  multi-agent.md  realtime-agents.md  workflow-agents.md
docs/official_docs/core/: runner.md
docs/official_docs/managed-agents/: runtime.md
docs/official_docs/models/: ollama.md  openai-responses.md  providers.md
docs/official_docs/sandbox/: index.md
docs/official_docs/security/: access-control.md  guardrails.md  memory.md
docs/official_docs/sessions/: sessions.md
docs/official_docs/studio/: studio.md
docs/official_docs/tools/: browser-tools.md  memory-tools.md  rag.md  ui-tools.md
examples/: README.md
examples/coding_agent/: README.md
examples/coding_agent/src/: main.rs
examples/enterprise_custom_tool/: Cargo.toml  README.md
examples/enterprise_custom_tool/src/: main.rs
examples/enterprise_hello/: .env.example  Cargo.toml  README.md
examples/enterprise_hello/src/: main.rs
examples/live_translation/assets/: index.html
examples/managed_runtime_hello/: Cargo.toml
examples/managed_runtime_hello/src/: main.rs
examples/realtime_voice/: Cargo.toml  README.md
examples/realtime_voice/assets/: index.html
examples/realtime_voice/src/: server.rs
scripts/: setup-dev.sh
