[package]
name = "enterprise-custom-tool"
version = "0.1.0"
edition = "2024"
publish = false
description = "Demonstrates the full custom tool round-trip pattern with adk-enterprise"

[workspace]

[dependencies]
adk-enterprise = { path = "../../adk-enterprise" }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
